@@ -1,3 +1,11 @@
+2008-02-04  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet-device-cdma.c
+	  src/applet-device-gsm.c
+		- (cdma_add_menu_item, gsm_add_menu_item): add a default connection
+			item when no connections are defined so that at least something can
+			be picked from the menu
+
 2008-02-01  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet-device-gsm.c
